--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <div class="container">
+  <div class="container">
+      <h1 class="title">Custom Countdown</h1>
         <div class="countdown-container">
           <div class="countdown-item">
             <div id="days">00</div>
@@ -37,6 +38,7 @@
         </div>
         <input type="date" id="target-date">
         <button id="set-date-button">Set Date</button>
+        <button id="reset-date-button">Reset Date</button>
       </div>
 
     <!-- Script -->
